--- a/vaadin-parent/vaadin-features/pom.xml
+++ b/vaadin-parent/vaadin-features/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.jjinterna.vaadin</groupId>
     <artifactId>vaadin-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>vaadin-features</artifactId>
   
