--- a/vaadin-parent/pom.xml
+++ b/vaadin-parent/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jjinterna.vaadin</groupId>
 	<artifactId>vaadin-parent</artifactId>
-	<version>1.0.0</version>
+	<version>7.4.0</version>
 	<packaging>pom</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<vaadin.version>7.3.6</vaadin.version>
+		<vaadin.version>7.4.0</vaadin.version>
 	</properties>
 
 	<modules>
@@ -69,12 +69,12 @@
 		<repository>
 			<id>maven-s3-release-repo</id>
 			<name>S3 Release Repository</name>
-			<url>s3://maven.newtechbtwebservices.net/release</url>
+			<url>s3://maven.jjinterna.com/release</url>
 		</repository>
 		<snapshotRepository>
 			<id>maven-s3-snapshot-repo</id>
 			<name>S3 Snapshot Repository</name>
-			<url>s3://maven.newtechbtwebservices.net/snapshot</url>
+			<url>s3://maven.jjinterna.com/snapshot</url>
 		</snapshotRepository>
 	</distributionManagement>
 
